test/fail/Issue481InstantiatedImportOnly.agda
module Issue481InstantiatedImportOnly where

import Common.Issue481ParametrizedModule Set
-- pointless, should yield error
